Carga de testimonios como corresponde en testimonios y en index.

--- a/views/index.pug
+++ b/views/index.pug
@@ -36,4 +36,7 @@ block contenido
 
     .container
         h2.mt-5.text-center VIAJES
-        include ./layout/layout_viaje
+            .row.proximos-viajes
+                each viaje in viajes
+                    if viaje.id > viajes.length-3
+                        include ./layout/layout_viaje
