--- a/views/viajes.pug
+++ b/views/viajes.pug
@@ -2,4 +2,6 @@ extends ./layout/index
 block contenido
     h1.text-center #{titulo}
     main.container.mt-5
-        include layout/layout_viaje
+        .row.proximos-viajes
+            each viaje in viajes
+                include ./layout/layout_viaje
