--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,19 @@ footer .nav a,
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.form-select {
+    display: block !important;
+    width: 100% !important;
+    height: 40px !important;
+    font-size: 1rem !important;
+    padding: 6px 12px !important;
+    border: 1px solid #ced4da !important;
+    border-radius: 0.375rem !important;
+    background-color: #fff !important;
+    appearance: auto !important;
+}
+
 @media (min-width:768px) {
     .descuento {
         height: 400px;
