--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -5,6 +5,7 @@ html(lang="es")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title #{nombre} | #{titulo}
         link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/icons/bootstrap-icons.css")
         link(rel="stylesheet", href="/css/style.css")
         link(rel='preconnect' href='https://fonts.googleapis.com')
         link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
